--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,3 @@
-/* app/globals.css */
-
 body {
   font-family: sans-serif;
   padding: 20px;
@@ -31,7 +29,7 @@ input {
 
 button {
   padding: 10px 15px;
-  background-color: #0070f3;
+  background-color: blue;
   color: #fff;
   border: none;
   cursor: pointer;
@@ -43,7 +41,6 @@ ul {
 }
 
 li {
-  background: #f9f9f9;
-  padding: 10px;
+  padding: 10px 0px;
   margin-bottom: 5px;
 }
