--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,8 +3,7 @@ body {
   padding: 20px;
 }
 
-h1,
-h2 {
+h1 {
   color: #333;
 }
 
@@ -29,7 +28,7 @@ input {
 
 button {
   padding: 10px 15px;
-  background-color: blue;
+  background-color: rgb(0, 88, 255);
   color: #fff;
   border: none;
   cursor: pointer;
